added some colors and hover-over effects to standard app page. added some shadows, plus a border for the json output

--- a/frontend/public/styles/mainStyles.css
+++ b/frontend/public/styles/mainStyles.css
@@ -11,3 +11,11 @@
 #hiddenForm {
     display: none;
 }
+
+body {
+    background-image: linear-gradient(to right, white, #ffe6d9);
+}
+
+li:hover {
+    background-color: #b7e7e7;
+}
