added to the user page. now have some dummy cards reflecting project types. also added a button to the navheader that brings up a create ticket modal.

--- a/frontend/public/styles/mainStyles.css
+++ b/frontend/public/styles/mainStyles.css
@@ -21,6 +21,20 @@
     background-color: white;
 }
 
+.makeTicket {
+    border-radius: 25px;
+    border: 4px double #ec7a6f;
+    background-color: rgb(252,120,54);
+    color: white;
+}
+
+.makeTicket:hover {
+    background-color: rgb(232, 99, 35);
+}
+
+.makeTicket:active {
+    background-color: rgb(245, 98, 28);
+}
 
 /*override colors for user info button*/
 .bootstrapOverride #userBtn {
