--- a/frontend/public/styles/mainStyles.css
+++ b/frontend/public/styles/mainStyles.css
@@ -19,6 +19,7 @@
 #sidebar {
     min-height: 100vh;
     background-color: white;
+    border-right: 3px solid rgba(184, 134, 11, 0.3);
 }
 
 .makeTicket {
