--- a/frontend/public/styles/mainStyles.css
+++ b/frontend/public/styles/mainStyles.css
@@ -62,3 +62,9 @@ body {
 li:hover {
     background-color: #b7e7e7;
 }
+
+@media only screen and (max-width: 768px) {
+    .bootstrapOverride #offcanvasNavbar-expand-tickets {
+        max-width: 30%;
+    }
+}
