added sidebar on admin to display tickets from azure. Templated from standard user page

--- a/frontend/public/styles/mainStyles.css
+++ b/frontend/public/styles/mainStyles.css
@@ -24,6 +24,11 @@
     background-color: white;
     border-right: 3px solid rgba(184, 134, 11, 0.3);
 }
+#sidebar-right {
+    min-height: 100vh;
+    background-color: white;
+    border-left: 3px solid rgba(184, 134, 11, 0.3);
+}
 
 .bootstrapOverride .makeTicket {
     border-radius: 25px;
