mainStyles: added styling for hovered-over projects and tickets and active project displayed conditionalForms: fixed error. set dafultvalue for select dropbox dataSourceConds: added some comments sidebarTeams: stopped displaying cards for teams, just listing them instead. removed attempt at change tickets showed based on teams. singleTicket: set check for null ticket info ticketForms: reformatted ticket forms per Shri's feedback - mostly one form per line. now displaying due date from tickets when in edit ticket mode, but need to work on the rest of the forms that may be filled, plus think about the date format a bit better and figure out how to render react elements in textarea box. currently getting object. userTickets: removed open ticket button, now can click on any ticket to open and view it. reformatted display of tickets to all have same vertical/horizontal size. now formatted to render tickets specifically from a chosen project (and fetch those only) standardUser: formatting changes in conjunction with no longer trying to display tickets for a certain team. renders hard-coded default team project on load so far. azureDevopsApi: removed comment about needing a method to get tickets by team. added comment to think about requiring team in function calls, as they have no affect at this point on what we want to display for a user. might be nice to leave that for future developers, but that's something that should be discussed with the team.

--- a/frontend/public/styles/mainStyles.css
+++ b/frontend/public/styles/mainStyles.css
@@ -30,6 +30,18 @@
     border-left: 3px solid rgba(184, 134, 11, 0.3);
 }
 
+.projectSelect .card {
+    border-width: 0.2rem;
+}
+
+.projectSelect .card:hover, .projectSelect .card:focus {
+    border-color: rgb(68, 179, 183);
+}
+
+.projectSelect .activeProjectCard {
+    border-color: rgba(50, 44, 147, 1);
+}
+
 .bootstrapOverride .makeTicket {
     border-radius: 25px;
     border: 4px double #ec7a6f;
@@ -62,6 +74,12 @@
 
 .bootstrapOverride .navbar {
     padding-bottom: 0;
+}
+
+.bootstrapOverride .cardOneLine {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 body {
