index.html: removed some unneeded comments mainstylescss: added styling for modal, radio buttons, and contenteditable div. added comments for clarity conditionalforms: added a container to have forms better fit modal singleticket: minor change. set event e to () ticketforms: reformatted, added comments to render section, added ability to onclick generate as many conditional forms questionnaires as desired, added contenteditable div to display formatted description html string in, added separate path for submit event reflecting ticket updates. update not functional yet, but groundwork in place usertickets: added ternary check for existing due date. need to remove once data requirements work for ticket creation azuredevopsapi: removed extra dollar sign from patch call in updateworkitem (exists for CREATE work item but not for this patch). currently getting nullpointerexception when trying to run this, which could be tied to a lot of non-updated fields (or i could be wrong - we will see). also changed put to patch - devops responds with 'put doesnt go here' error when trying to us put

--- a/frontend/public/styles/mainStyles.css
+++ b/frontend/public/styles/mainStyles.css
@@ -30,6 +30,7 @@
     border-left: 3px solid rgba(184, 134, 11, 0.3);
 }
 
+/*overrides for project selection cards*/
 .projectSelect .card {
     border-width: 0.2rem;
 }
@@ -42,6 +43,13 @@
     border-color: rgba(50, 44, 147, 1);
 }
 
+/*override for contenteditdiv. grows with more text, no scrollbar*/
+.bootstrapOverride #contentEditDiv {
+    min-height: 5rem;
+    overflow:auto;
+}
+
+/*style overrides for create ticket button*/
 .bootstrapOverride .makeTicket {
     border-radius: 25px;
     border: 4px double #ec7a6f;
@@ -82,12 +90,20 @@
     white-space: nowrap;
 }
 
+.bootstrapOverride .modal-dialog {
+    max-width: 600px;
+}
+
 body {
     background-image: linear-gradient(to right, white, #ffe6d9);
 }
 
 li:hover {
     background-color: #b7e7e7;
+}
+
+input[type=radio]{
+    transform:scale(1.5);
 }
 
 @media only screen and (max-width: 768px) {
