ticketforms: added line for autocomplete component mainstyles: fixed a couple of missing lines (needed px and rgb in two style lines) autocomplete: making autofill form for tagging members packages updated to use material-ui/core and /lab

--- a/frontend/public/styles/mainStyles.css
+++ b/frontend/public/styles/mainStyles.css
@@ -103,7 +103,7 @@
 .bootstrapOverride .makeTicket:active,
 .bootstrapOverride .makeTicket:focus {
     background-color: transparent;
-    border-color: (0, 58, 139);
+    border-color: rgb(0, 58, 139);
     color: rgb(252, 120, 54);
 }
 
@@ -121,7 +121,7 @@
 .bootstrapOverride .logOutButton {
     position: fixed;
     top: 0.8rem;
-    left: 2;
+    left: 2px;
 
 }
 
