--- a/frontend/public/styles/mainStyles.css
+++ b/frontend/public/styles/mainStyles.css
@@ -21,9 +21,15 @@
 }
 
 #sidebar {
-    min-height: 100vh;
-    background-color: #e7ecf1;
+    min-height: 100vh
+}
 
+#inset-shadow {
+    box-shadow: inset 0.4rem 0.2rem 1.5rem rgba(0,0,0,.175);
+}
+
+#navBg, #sidebar {
+    background-color: rgb(248, 249, 250);
 }
 
 #sidebar-right {
