--- a/frontend/public/styles/mainStyles.css
+++ b/frontend/public/styles/mainStyles.css
@@ -15,7 +15,6 @@
 
 #ts-color {
     color: rgb(104, 171, 193);
-    /*text-align: justify;*/
     font-size: smaller;
     text-decoration: none;
 }
@@ -46,9 +45,9 @@
     cursor: pointer;
 }
 
-.bootstrapOverride .eyeSee {
-    cursor: pointer;
-    color: #181818;
+.articleStyle {
+    border-color: #ced4da;
+    border-radius: 0.375rem;
 }
 
 /*overrides for project selection cards*/
@@ -81,6 +80,12 @@
     overflow: auto;
 }
 
+/*override style for view ticket button*/
+.bootstrapOverride .eyeSee {
+    cursor: pointer;
+    color: #181818;
+}
+
 /*style overrides for create ticket button*/
 .bootstrapOverride .makeTicket {
     border: none;
@@ -100,7 +105,6 @@
 
 .bootstrapOverride .makeTicket:hover,
 .bootstrapOverride .adminButton:hover {
-    /*background-color: rgb(232, 99, 35);*/
     background-color: transparent;
     text-decoration: underline;
     color: rgb(252, 120, 54);
@@ -127,7 +131,6 @@
 .bootstrapOverride .logOutButton {
     position: fixed;
     top: 0.8rem;
-
 }
 
 .bootstrapOverride #userCollapse {
@@ -138,11 +141,14 @@
     padding-bottom: 0;
 }
 
-.bootstrapOverride .cardOneLine {
-    text-overflow: ellipsis;
-    overflow: hidden;
+.bootstrapOverride .cardOneLine div
+{
+    display: inline-block;
     white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
+
 
 .bootstrapOverride .modal-dialog {
     max-width: 600px;
