- added styling to view icon - removed react-icons, replaced with mui icons on Tickets.jsx - can now block and unblock from block icon (function added plus color styles toggle)

--- a/frontend/public/styles/mainStyles.css
+++ b/frontend/public/styles/mainStyles.css
@@ -83,7 +83,11 @@
 /*override style for view ticket button*/
 .bootstrapOverride .eyeSee {
     cursor: pointer;
-    color: #181818;
+    color: rgb(0, 0, 0);
+}
+
+.eyeSee:hover {
+    color: rgb(224, 100, 39);
 }
 
 /*style overrides for create ticket button*/
