--- a/frontend/public/styles/mainStyles.css
+++ b/frontend/public/styles/mainStyles.css
@@ -50,6 +50,21 @@
     border-radius: 0.375rem;
 }
 
+.hoverOver {
+    border: white 2px solid;
+    background-color: white;
+}
+
+.hoverOver.redTag {
+    border: red 2px solid;
+    background-color: #fdf8f8;
+}
+
+.hoverOver.greenTag {
+    border: #0bee3d 2px solid;
+    background-color: #f7fdf7;
+}
+
 /*overrides for project selection cards*/
 .projectSelect .card {
     border-width: 0.2rem;
@@ -62,11 +77,6 @@
 
 .projectSelect .activeProjectCard {
     border-color: rgba(50, 44, 147, 1);
-}
-
-.hoverOver {
-    border: white 2px solid;
-    background-color: white;
 }
 
 .bootstrapOverride .hoverOver:hover,
