--- a/frontend/public/styles/mainStyles.css
+++ b/frontend/public/styles/mainStyles.css
@@ -39,6 +39,29 @@
 
 #root {
     background-color: #e7ecf1;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+body::-webkit-scrollbar {
+    display: none;
+}
+
+#vhscroll {
+    height: 100vh;
+}
+
+#vhscroll::-webkit-scrollbar {
+    display: none;
+}
+
+.colscrolls {
+    height: 100%;
+    overflow-y: scroll;
+}
+
+.colscrolls::-webkit-scrollbar {
+    display: none;
 }
 
 .userTicketBtns {
@@ -57,10 +80,6 @@
 
 .hoverOver.redTag {
     border: #fd7f7f 2px solid;
-}
-
-.hoverOver.greenTag {
-    border: #3bda63 2px solid;
 }
 
 /*overrides for project selection cards*/
