killed scroll function for main page body. now only have scroll ability for tickets component.

--- a/frontend/public/styles/mainStyles.css
+++ b/frontend/public/styles/mainStyles.css
@@ -39,8 +39,10 @@
 
 #root {
     background-color: #e7ecf1;
-    -ms-overflow-style: none;
-    scrollbar-width: none;
+}
+
+body {
+    overflow: hidden;
 }
 
 body::-webkit-scrollbar {
