--- a/frontend/public/styles/mainStyles.css
+++ b/frontend/public/styles/mainStyles.css
@@ -1,5 +1,5 @@
 body {
-    overflow: hidden;
+    /*overflow: hidden;*/
 }
 
 body::-webkit-scrollbar {
@@ -35,23 +35,29 @@ input[type=radio] {
     text-decoration: none;
 }
 
+.bootstrapOverride .onCall {
+    color: rgb(104, 171, 193);
+    font-weight: bold !important;
+}
+
 #sidebar {
-    min-height: 100vh
+    min-height: 100vh;
 }
 
 #inset-shadow {
-    box-shadow: inset 0.2rem 0.4rem 1.5rem rgba(0,0,0,.175);
+    box-shadow: inset 0.2rem 0.4rem 1.5rem rgba(0, 0, 0, .175);
 }
 
-#navBg, #sidebar {
+#navBg,
+#sidebar,
+#sidebar-right {
     background-color: rgb(248, 249, 250);
 }
 
 #sidebar-right {
     height: 100vh;
     overflow-y: scroll;
-    background-color: white;
-    border-left: 3px solid rgba(184, 134, 11, 0.3);
+
 }
 
 #root {
@@ -188,7 +194,7 @@ input[type=radio] {
 
 
 .bootstrapOverride .modal-dialog {
-    box-shadow: 0.2rem 0.4rem 1.5rem rgba(0,0,0,.175);
+    box-shadow: 0.2rem 0.4rem 1.5rem rgba(0, 0, 0, .175);
 }
 
 @media only screen and (max-width: 768px) {
