added ability to display icons in ticket creation form. added getWorkItemTypeIcons function in DevOps API page, added styles to handle the images.

--- a/frontend/public/styles/mainStyles.css
+++ b/frontend/public/styles/mainStyles.css
@@ -84,6 +84,11 @@ input[type=radio] {
     overflow-y: scroll;
 }
 
+.iconsize {
+    display: inline;
+    max-width: 3%;
+}
+
 .userTicketBtns {
     cursor: pointer;
 }
