restyled single ticket view more and added first-letter capitalize function to parseHtml function in util. ticket/tickets pages now also capitalizes each displayed first letter of ticket titles.

--- a/frontend/public/styles/mainStyles.css
+++ b/frontend/public/styles/mainStyles.css
@@ -84,6 +84,14 @@ input[type=radio] {
     font-weight: 500;
 }
 
+.bootstrapOverride div.inactiveForms, .bootstrapOverride h5.inlineH5 {
+    display: inline;
+}
+
+.bootstrapOverride .inlineContainer {
+    display: inline;
+}
+
 .sortTicket {
     color: rgb(5,97,252);
 }
