--- a/frontend/public/styles/mainStyles.css
+++ b/frontend/public/styles/mainStyles.css
@@ -188,6 +188,15 @@ input[type=radio] {
     border-color: rgb(104, 171, 193);
 }
 
+.lineClamp {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    height: 3em;
+}
+
 .adminError {
     font-size: larger;
     color: whitesmoke;
